--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DEVREV's Library Management</title>
+    <title>Sarin Library Management</title>
+   <link rel="icon" type="image/png" href="img/favicon.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
@@ -14,9 +16,7 @@
 		<h1 class="logo"><a href="#">Library Management</a></h1>
       <ul class="main-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="https://jagadeeshpj.netlify.app/" target="_blank">About(Me)</a></li>
-          <li><a href="#">Books</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="" target="_blank">About(Me)</a></li>
       </ul>
 	</header> 
 
@@ -58,8 +58,9 @@
   <footer>
     <div class="footer">
     <div class="row">
-    <a href="https://github.com/jagadeeshpj" target="_blank"><i class="fa fa-github"></i></a>
-    <a href="https://www.instagram.com/jagadeesh2001/" target="_blank"><i class="fa fa-instagram"></i></a>
+    <a href="https://github.com/sarinitc/sarinitc.git" target="_blank"><i class="fa fa-github"></i></a>
+    <a href="https://www.instagram.com/Cheav Sarin/" target="_blank"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=100070589700094&mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a>
     <a href="#"><i class="fa fa-youtube"></i></a>
     <a href="#"><i class="fa fa-twitter"></i></a>
     </div>
@@ -73,14 +74,10 @@
     </div>
     
     <div class="row">
-    DEVREV Library Management || Copyright © 2022  - All rights reserved || Designed By: P JAGADEESH 
+    DEVREV Library Management || Copyright © 2022  - All rights reserved || Designed By: Cheav Sarin
     </div>
     </div>
     </footer>
     
 </html>
 
-<!-- This site developed by 
-P JAGADEESH
-jagadeeshpj2001@gmail.com
--->
