--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <header class="header">
-		<h1 class="logo"><a href="#">Library Management</a></h1>
-      <ul class="main-nav">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="" target="_blank">About(Me)</a></li>
-      </ul>
+  <header class="header wrapper">
+
+      <div class="title">
+        <h1 class="logo"><a href="#">Library Management</a></h1>
+      </div>
+        <div class="nav">
+          <ul class="main-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="" target="_blank">About(Me)</a></li>
+        </ul>
+        </div>
 	</header> 
 
   <body>
@@ -61,8 +66,6 @@
     <a href="https://github.com/sarinitc/sarinitc.git" target="_blank"><i class="fa fa-github"></i></a>
     <a href="https://www.instagram.com/Cheav Sarin/" target="_blank"><i class="fa fa-instagram"></i></a>
     <a href="https://www.facebook.com/profile.php?id=100070589700094&mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-youtube"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
     </div>
     
     <div class="row">
